changed MaterialEvent to method in IAntimatterRegistrar instead of actual event